# Crafts-of-Bengal

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_author_user.py
cart/: admin.py  models.py  urls.py  views.py
cart/migrations/: 0002_order_orderitem.py  0003_remove_order_fname_remove_order_lname_orderprofile.py  0004_order_fname_order_lname.py  0005_orderprofile_fname_orderprofile_lname.py  0006_remove_orderprofile_email_remove_orderprofile_fname_and_more.py  0007_alter_order_email_alter_order_phone_and_more.py  0008_alter_order_phone_alter_order_pincode.py  0009_remove_orderitem_order_remove_orderitem_product_and_more.py
e_commerce/: db.sqlite3  settings.py  urls.py
e_commerce/cart/: views.py
e_commerce/e_commerce/: settings.py
index/: faq_bot.py  urls.py  views.py
login/: admin.py  models.py  urls.py  views.py
ml_model/: ImageRecom.py  Images_features.pkl  Item Based Collaborative Filtering.ipynb  Matrix Factorization Recommender System.ipynb  correlation_matrix.pkl  faq_bot.py  feature_extractor.py  filenames.pkl  intersec.py  product_title  product_title_list  ratings_data.csv  tempCodeRunnerFile.py  user_product_df.pkl
products/: admin.py  models.py  tests.py  urls.py  views.py
purchase/: admin.py  models.py  urls.py  views.py
template/: chatbot.html
whoosh_index/: MAIN_6uq7ybxf97wrblms.seg  MAIN_ahwa6absl83nnskp.seg  MAIN_iqw2by9p9nz8fu1k.seg  MAIN_s1boffl8ed97834r.seg  MAIN_sli4l019f522881v.seg  _MAIN_10.toc
(+60 files in other folders)
